testdata/baselines/reference/submodule/conformance/importTag23.errors.txt
/b.js(5,18): error TS1361: 'NS' cannot be used as a value because it was imported using 'import type'.
/b.js(6,14): error TS2420: Class 'C' incorrectly implements interface 'I'.
  Property 'foo' is missing in type 'C' but required in type 'I'.


==== /a.ts (0 errors) ====
    export interface I {
        foo(): void;
    }
    
==== /b.js (2 errors) ====
    /**
     * @import * as NS from './a'
     */
    
    /** @implements {NS.I} */
                     ~~
!!! error TS1361: 'NS' cannot be used as a value because it was imported using 'import type'.
!!! related TS1376 /b.js:2:17: 'NS' was imported here.
    export class C {}
                 ~
!!! error TS2420: Class 'C' incorrectly implements interface 'I'.
!!! error TS2420:   Property 'foo' is missing in type 'C' but required in type 'I'.
!!! related TS2728 /a.ts:2:5: 'foo' is declared here.
    